Bug 1118235 - Disable AVX for now due to performance regressions. r=jandem, a=lmandel